--- a/.env.example
+++ b/.env.example
@@ -19,6 +19,7 @@ DATABASE_URL="postgresql://postgres:password@localhost:5432/mayfest-learning-app
 # NEXTAUTH_SECRET=""
 NEXTAUTH_URL="http://localhost:3000"
 
-# Next Auth Discord Provider
-DISCORD_CLIENT_ID=""
-DISCORD_CLIENT_SECRET=""
+# Next Auth Spotify Provider Example
+SPOTIFY_CLIENT_ID=""
+SPOTIFY_CLIENT_SECRET=""
+
