--- a/package.json
+++ b/package.json
@@ -24,8 +24,11 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "drizzle-orm": "^0.33.0",
+    "file-saver": "^2.0.5",
     "framer-motion": "^11.11.9",
     "geist": "^1.3.0",
+    "html-to-image": "^1.11.11",
+    "html2canvas": "^1.4.1",
     "lucide-react": "^0.453.0",
     "net": "^1.0.2",
     "next": "^14.2.4",
@@ -41,6 +44,7 @@
   },
   "devDependencies": {
     "@types/eslint": "^8.56.10",
+    "@types/file-saver": "^2.0.7",
     "@types/node": "^20.14.10",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
